/*
 * Copyright (c) 2023. Liero AB
 *
 * Permission is hereby granted, free of charge, to any person obtaining
 * a copy of this software and associated documentation files (the "Software"),
 * to deal in the Software without restriction, including without limitation
 * the rights to use, copy, modify, merge, publish, distribute, sublicense,
 * and/or sell copies of the Software, and to permit persons to whom the
 * Software is furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
 * IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
 * CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
 * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
 * OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 */

syntax = "proto3";
package stanza;
option go_package = "git.liero.se/opentelco/go-swpx/proto/go/stanzapb";

message ConfigurationLine {
    // line to set, e.g "interface GigabitEthernet0/0/1"
    string content = 1;
}

message Result {
    // the line that was set
    string line = 1;

    // the line number in the stanza
    int64 line_number = 2;

    // if the line was sucessfully set or not
    enum Status {
        STATUS_NOT_SET = 0;
        SUCCESS = 1;
        FAILED  = 2;
    }
    Status status = 3;

    // if the line was not sucessfully set, this is the error message
    optional string error = 4;
}

message ConfigureResponse {
    repeated Result stanza_result = 1;
}